<resources>
    <string name="app_name">Poker</string>
    <string name="no_sessions_available">No sessions available. Create one to get started!</string>
    <string name="create_new_session">Create new session</string>
    <string name="participants">Participants</string>
    <string name="creation_date">Creation Date</string>
    <string name="active">Active</string>
    <string name="no_results_found">No results found</string>
    <string name="no_sessions_found">No sessions found matching your search</string>
    <string name="no_matching_sessions_found">No matching sessions found</string>
    <string name="clear_search">Clear Search</string>
    <string name="no_search_results">No search results</string>
    <string name="create_new_session_title">Create New Session</string>
    <string name="name_for_your_planning">Enter a name for your planning poker session</string>
    <string name="session_name">Session Name</string>
    <string name="create_session">Create Session</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>